--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
   <!-- Нормалайз -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
     integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
-    crossorigin="anonymous" referrerpolicy="no-referrer" />
+    crossorigin="anonymous" referrerpolicy="no-referrer">
+
   <!-- стилі -->
   <link rel="stylesheet" href="./css/styles.css" />
 </head>
@@ -35,9 +36,17 @@
 
       <ul class="contacts-header list">
         <li class="item">
-          <a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+          <a class="link" href="mailto:info@devstudio.com">
+            <svg class="header-icon" width="16" height="12">
+              <use href="./images/icons.svg#icon-envelope"></use>
+            </svg>
+            info@devstudio.com</a>
         </li>
-        <li class="item"><a class="link" href="tel:+380961111111">+38 096 111 11 11</a></li>
+        <li class="item"><a class="link" href="tel:+380961111111">
+            <svg class="header-icon" width="10" height="16">
+              <use href="./images/icons.svg#icon-smartphone"></use>
+            </svg>
+            +38 096 111 11 11</a></li>
       </ul>
     </div>
   </header>
@@ -56,11 +65,16 @@
     <section class="section features">
       <div class="container">
         <!--Початок прихованого заголовку -->
-        <h2 class="visually-hidden section-title">Переваги компанії</h2>
+        <h2 class="visually-hidden">Переваги компанії</h2>
         <!-- Кінець прихованого заголовку -->
 
         <ul class="list features-list">
           <li class="item features-item">
+            <div class="features-icon-block">
+              <svg class="features-icon" width="70" height="70px">
+                <use href="./images/icons.svg#icon-antenna"></use>
+              </svg>
+            </div>
             <h3 class="features-title">УВАГА ДО ДЕТАЛЕЙ</h3>
             <p class="features-description">
               Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.
@@ -68,6 +82,11 @@
           </li>
 
           <li class="item features-item">
+            <div class="features-icon-block">
+              <svg class="features-icon" width="70" height="70px">
+                <use href="./images/icons.svg#icon-clock"></use>
+              </svg>
+            </div>
             <h3 class="features-title">ПУНКТУАЛЬНІСТЬ</h3>
             <p class="features-description">
               Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.
@@ -75,6 +94,11 @@
           </li>
 
           <li class="item features-item">
+            <div class="features-icon-block">
+              <svg class="features-icon" width="70" height="70px">
+                <use href="./images/icons.svg#icon-diagram"></use>
+              </svg>
+            </div>
             <h3 class="features-title">ПЛАНУВАННЯ</h3>
             <p class="features-description">
               Так само консультація з широким активом значною мірою зумовлює.
@@ -82,6 +106,11 @@
           </li>
 
           <li class="item features-item">
+            <div class="features-icon-block">
+              <svg class="features-icon" width="70" height="70px">
+                <use href="./images/icons.svg#icon-astronaut"></use>
+              </svg>
+            </div>
             <h3 class="features-title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
             <p class="features-description">
               Значимість цих проблем настільки очевидна, що реалізація планових завдань.
@@ -115,6 +144,7 @@
     <section class="section team">
       <div class="container">
         <h2 class="section-title">Наша команда</h2>
+
         <ul class="list team-list">
           <li class="item team-item">
             <img class="img" src="./images/team/product-designer.jpg" alt="Ігор Дем'яненко - Product designer"
@@ -122,14 +152,77 @@
             <div class="team-item-content">
               <h3 class="team-name">Ігор Дем'яненко</h3>
               <p class="team-position">Product designer</p>
+
+              <ul class="list socials-list">
+                <li class="item socials-list-item">
+                  <a class="link" href="https://www.instagram.com/" target="_blank" rel="noopener noreferrer">
+                    <svg class="socials-icon" width="20" height="20">
+                      <use href="./images/icons.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="item socials-list-item">
+                  <a class="link" href="https://www.twitter.com/" target="_blank" rel="noopener noreferrer">
+                    <svg class="socials-icon" width="20" height="20">
+                      <use href="./images/icons.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="item socials-list-item">
+                  <a class="link" href="https://www.facebook.com/" target="_blank" rel="noopener noreferrer">
+                    <svg class="socials-icon" width="20" height="20">
+                      <use href="./images/icons.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="item socials-list-item">
+                  <a class="link" href="https://www.linkedin.com/" target="_blank" rel="noopener noreferrer">
+                    <svg class="socials-icon" width="20" height="20">
+                      <use href="./images/icons.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
+
             </div>
           </li>
-
           <li class="item team-item">
             <img class="img" src="./images/team/frontend.jpg" alt="Ольга Репіна" width="270" height="260" />
             <div class="team-item-content">
               <h3 class="team-name">Ольга Репіна</h3>
               <p class="team-position">Frontend Developer</p>
+
+              <ul class="list socials-list">
+                <li class="item socials-list-item">
+                  <a class="link" href="https://www.instagram.com/" target="_blank" rel="noopener noreferrer">
+                    <svg class="socials-icon" width="20" height="20">
+                      <use href="./images/icons.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="item socials-list-item">
+                  <a class="link" href="https://www.twitter.com/" target="_blank" rel="noopener noreferrer">
+                    <svg class="socials-icon" width="20" height="20">
+                      <use href="./images/icons.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="item socials-list-item">
+                  <a class="link" href="https://www.facebook.com/" target="_blank" rel="noopener noreferrer">
+                    <svg class="socials-icon" width="20" height="20">
+                      <use href="./images/icons.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="item socials-list-item">
+                  <a class="link" href="https://www.linkedin.com/" target="_blank" rel="noopener noreferrer">
+                    <svg class="socials-icon" width="20" height="20">
+                      <use href="./images/icons.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
+
             </div>
           </li>
           <li class="item team-item">
@@ -137,6 +230,36 @@
             <div class="team-item-content">
               <h3 class="team-name">Микола Тарасов</h3>
               <p class="team-position">Marketing</p>
+              <ul class="list socials-list">
+                <li class="item socials-list-item">
+                  <a class="link" href="https://www.instagram.com/" target="_blank" rel="noopener noreferrer">
+                    <svg class="socials-icon" width="20" height="20">
+                      <use href="./images/icons.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="item socials-list-item">
+                  <a class="link" href="https://www.twitter.com/" target="_blank" rel="noopener noreferrer">
+                    <svg class="socials-icon" width="20" height="20">
+                      <use href="./images/icons.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="item socials-list-item">
+                  <a class="link" href="https://www.facebook.com/" target="_blank" rel="noopener noreferrer">
+                    <svg class="socials-icon" width="20" height="20">
+                      <use href="./images/icons.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="item socials-list-item">
+                  <a class="link" href="https://www.linkedin.com/" target="_blank" rel="noopener noreferrer">
+                    <svg class="socials-icon" width="20" height="20">
+                      <use href="./images/icons.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
             </div>
           </li>
           <li class="item team-item">
@@ -144,9 +267,100 @@
             <div class="team-item-content">
               <h3 class="team-name">Михайло Єрмаков</h3>
               <p class="team-position">UI Designer</p>
+              <ul class="list socials-list">
+                <li class="item socials-list-item">
+                  <a class="link" href="https://www.instagram.com/" target="_blank" rel="noopener noreferrer">
+                    <svg class="socials-icon" width="20" height="20">
+                      <use href="./images/icons.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="item socials-list-item">
+                  <a class="link" href="https://www.twitter.com/" target="_blank" rel="noopener noreferrer">
+                    <svg class="socials-icon" width="20" height="20">
+                      <use href="./images/icons.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="item socials-list-item">
+                  <a class="link" href="https://www.facebook.com/" target="_blank" rel="noopener noreferrer">
+                    <svg class="socials-icon" width="20" height="20">
+                      <use href="./images/icons.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="item socials-list-item">
+                  <a class="link" href="https://www.linkedin.com/" target="_blank" rel="noopener noreferrer">
+                    <svg class="socials-icon" width="20" height="20">
+                      <use href="./images/icons.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
             </div>
           </li>
         </ul>
+      </div>
+    </section>
+
+    <!-- Клієнти -->
+
+    <section class="section clients">
+      <div class="container">
+
+        <h2 class="section-title">Постійні клієнти</h2>
+        <ul class="list clients-list">
+
+          <li class="item clients-item">
+            <a class="link" href="" target="_blank" rel="noopener noreferrer">
+              <svg class="clients-icon" width="106" height="60">
+                <use href="./images/icons.svg#icon-client-1"></use>
+              </svg>
+            </a>
+          </li>
+
+          <li class="item clients-item">
+            <a class="link" href="" target="_blank" rel="noopener noreferrer">
+              <svg class="clients-icon" width="106" height="60">
+                <use href="./images/icons.svg#icon-client-2"></use>
+              </svg>
+            </a>
+          </li>
+
+          <li class="item clients-item">
+            <a class="link" href="" target="_blank" rel="noopener noreferrer">
+              <svg class="clients-icon" width="106" height="60">
+                <use href="./images/icons.svg#icon-client-3"></use>
+              </svg>
+            </a>
+          </li>
+
+          <li class="item clients-item">
+            <a class="link" href="" target="_blank" rel="noopener noreferrer">
+              <svg class="clients-icon" width="106" height="60">
+                <use href="./images/icons.svg#icon-client-4"></use>
+              </svg>
+            </a>
+          </li>
+
+          <li class="item clients-item">
+            <a class="link" href="" target="_blank" rel="noopener noreferrer">
+              <svg class="clients-icon" width="106" height="60">
+                <use href="./images/icons.svg#icon-client-5"></use>
+              </svg>
+            </a>
+          </li>
+
+          <li class="item clients-item">
+            <a class="link" href="" target="_blank" rel="noopener noreferrer">
+              <svg class="clients-icon" width="106" height="60">
+                <use href="./images/icons.svg#icon-client-6"></use>
+              </svg>
+            </a>
+          </li>
+
+        </ul>
+
       </div>
     </section>
   </main>
@@ -154,19 +368,55 @@
   <!--Футер-->
   <footer class="page-footer">
     <div class="container">
-      <a class="link logo" href="./index.html"><span class="accent-logo">Web</span><span
-          class="footer-logo">Studio</span></a>
+      <div class="footer-box-address">
+        <a class="link logo" href="./index.html"><span class="accent-logo">Web</span><span
+            class="footer-logo">Studio</span></a>
 
-      <address id="contacts" class="address-footer">
+        <address id="contacts" class="address-footer">
+          <ul class="list">
+            <li class="item"><a class="link address-map" target="_blank" rel="norefferer nofollow"
+                href="https://goo.gl/maps/ebckDGz18cMJigHJ8">м. Київ, пр-т
+                Лесі Українки, 26</a></li>
+            <li class="item"><a class="link address-email" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li class="item"><a class="link address-tel" href="tel:+380961111111">+38 096 111 11 11</a></li>
+          </ul>
+        </address>
+      </div>
+
+      <div class="footer-box-links">
+        <p class="join">Приєднуйтесь</p>
         <ul class="list">
-          <li class="item"><a class="link address-map" target="_blank" rel="norefferer nofollow"
-              href="https://goo.gl/maps/ebckDGz18cMJigHJ8">м. Київ, пр-т
-              Лесі Українки, 26</a></li>
-          <li class="item"><a class="link address-email" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li class="item"><a class="link address-tel" href="tel:+380961111111">+38 096 111 11 11</a></li>
+          <li class="item">
+            <a class="link" href="https://www.instagram.com/" target="_blank" rel="noopener noreferrer">
+              <svg class="icon" width="20" height="20">
+                <use href="./images/icons.svg#icon-instagram"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="item">
+            <a class="link" href="https://twitter.com/" target="_blank" rel="noopener noreferrer"><svg class="icon"
+                width="20" height="20">
+                <use href="./images/icons.svg#icon-twitter"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="item">
+            <a class="link" href="https://www.facebook.com/" target="_blank" rel="noopener noreferrer"><svg class="icon"
+                width="20" height="20">
+                <use href="./images/icons.svg#icon-facebook"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="item">
+            <a class="link" href="https://www.linkedin.com/" target="_blank" rel="noopener noreferrer"><svg class="icon"
+                width="20" height="20">
+                <use href="./images/icons.svg#icon-linkedin"></use>
+              </svg></a>
+          </li>
         </ul>
-      </address>
+      </div>
     </div>
+
   </footer>
 </body>
 
