--- a/portfolio.html
+++ b/portfolio.html
@@ -35,9 +35,17 @@
 
       <ul class="contacts-header list">
         <li class="item">
-          <a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+          <a class="link" href="mailto:info@devstudio.com">
+            <svg class="header-icon" width="16" height="12">
+              <use href="./images/icons.svg#icon-envelope"></use>
+            </svg>
+            info@devstudio.com</a>
         </li>
-        <li class="item"><a class="link" href="tel:+380961111111">+38 096 111 11 11</a></li>
+        <li class="item"><a class="link" href="tel:+380961111111">
+            <svg class="header-icon" width="10" height="16">
+              <use href="./images/icons.svg#icon-smartphone"></use>
+            </svg>
+            +38 096 111 11 11</a></li>
       </ul>
     </div>
   </header>
@@ -152,19 +160,55 @@
   <!--Футер-->
   <footer class="page-footer">
     <div class="container">
-      <a class="link logo" href="./index.html"><span class="accent-logo">Web</span><span
-          class="footer-logo">Studio</span></a>
+      <div class="footer-box-address">
+        <a class="link logo" href="./index.html"><span class="accent-logo">Web</span><span
+            class="footer-logo">Studio</span></a>
 
-      <address id="contacts" class="address-footer">
+        <address id="contacts" class="address-footer">
+          <ul class="list">
+            <li class="item"><a class="link address-map" target="_blank" rel="norefferer nofollow"
+                href="https://goo.gl/maps/ebckDGz18cMJigHJ8">м. Київ, пр-т
+                Лесі Українки, 26</a></li>
+            <li class="item"><a class="link address-email" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li class="item"><a class="link address-tel" href="tel:+380961111111">+38 096 111 11 11</a></li>
+          </ul>
+        </address>
+      </div>
+
+      <div class="footer-box-links">
+        <p class="join">Приєднуйтесь</p>
         <ul class="list">
-          <li class="item"><a class="link address-map" target="_blank" rel="norefferer nofollow"
-              href="https://goo.gl/maps/ebckDGz18cMJigHJ8">м. Київ, пр-т
-              Лесі Українки, 26</a></li>
-          <li class="item"><a class="link address-email" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li class="item"><a class="link address-tel" href="tel:+380961111111">+38 096 111 11 11</a></li>
+          <li class="item">
+            <a class="link" href="https://www.instagram.com/" target="_blank" rel="noopener noreferrer">
+              <svg class="icon" width="20" height="20">
+                <use href="./images/icons.svg#icon-instagram"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="item">
+            <a class="link" href="https://twitter.com/" target="_blank" rel="noopener noreferrer"><svg class="icon"
+                width="20" height="20">
+                <use href="./images/icons.svg#icon-twitter"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="item">
+            <a class="link" href="https://www.facebook.com/" target="_blank" rel="noopener noreferrer"><svg class="icon"
+                width="20" height="20">
+                <use href="./images/icons.svg#icon-facebook"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="item">
+            <a class="link" href="https://www.linkedin.com/" target="_blank" rel="noopener noreferrer"><svg class="icon"
+                width="20" height="20">
+                <use href="./images/icons.svg#icon-linkedin"></use>
+              </svg></a>
+          </li>
         </ul>
-      </address>
+      </div>
     </div>
+
   </footer>
 </body>
 
